@@ -5,7 +5,9 @@ aTunes 3.0.1
 - FIX: Disable play list menu actions when play list selection changes, not only popup menu
 - FIX: Problem reordering columns with Java 7
 - FIX: Problem changing look and feel and skin using keyboard in combos
-- FIX: Error retrieving titles from CDDC while ripping a CD
+- FIX: Error retrieving titles from CDDB while ripping a CD
+- FIX: Avoid concurrency problems with album collections
+
 
 aTunes 3.0.0
 ------------
